Add keywords to .desktop file
Summary:
FEATURE: 400989

The .desktop file for Spectacle doesn't have a "Keywords" entry. It would probably do well to provide Spectacle as a result when users search for 'Snipping Tool' as that's the Windows variant.

Test Plan: desktop-file-validate both before and after applying the patch

Reviewers: #spectacle, ngraham

Reviewed By: #spectacle, ngraham

Subscribers: ngraham, pino, #spectacle

Tags: #spectacle

Differential Revision: https://phabricator.kde.org/D17396

--- a/desktop/org.kde.spectacle.desktop
+++ b/desktop/org.kde.spectacle.desktop
@@ -78,6 +78,7 @@ Name[x-test]=xxSpectaclexx
 Name[zh_CN]=Spectacle
 Name[zh_TW]=Spectacle
 Categories=Qt;KDE;Utility;
+Keywords=snapshot;capture;print;screenshot;snipping;snip;
 Exec=spectacle
 Icon=spectacle
 Type=Application
