Use qdbus for actions in desktop file
Summary:
As noted by @davidedmundson in D19153 Spectacle uses the spectacle command for the actions it defines in it's desktop file. This changes these
actions to use the same dbus commands as the actions defined in the khotkeys file. This opens the screenshot in the same instance of Spectacle
if it's running. Which is more expected than opening a new window if you right click on spectacle in the task manager and give it the command
"Take a new screenshot"

Test Plan:
- Open Spectacle
- Right click on it in the task manager
- No new window is opened, spectacle is now showing the new screenshot

Reviewers: #spectacle, davidedmundson, ngraham

Reviewed By: #spectacle, davidedmundson, ngraham

Subscribers: davidedmundson, #spectacle

Tags: #spectacle

Differential Revision: https://phabricator.kde.org/D19225

--- a/desktop/org.kde.spectacle.desktop
+++ b/desktop/org.kde.spectacle.desktop
@@ -96,7 +96,7 @@ Keywords[uk]=знімок;захоплення;друк;знімок вікна;
 Keywords[x-test]=xxsnapshotxx;xxcapturexx;xxprintxx;xxscreenshotxx;xxsnippingxx;xxsnipxx;
 Keywords[zh_CN]=snapshot;capture;print;screenshot;snipping;snip;快照;截图;抓取;屏幕截图;
 Keywords[zh_TW]=snapshot;capture;print;screenshot;snipping;snip;截圖;擷取;截圖程式
-Exec=spectacle
+Exec=qdbus org.kde.Spectacle / StartAgent
 Icon=spectacle
 Type=Application
 Terminal=false
@@ -145,7 +145,7 @@ Name[uk]=Захопити зображення усієї стільниці
 Name[x-test]=xxCapture Entire Desktopxx
 Name[zh_CN]=抓取整个桌面
 Name[zh_TW]=擷取整個桌面
-Exec=spectacle -f
+Exec=qdbus org.kde.Spectacle / FullScreen false
 
 [Desktop Action CurrentMonitorScreenShot]
 Name=Capture Current Monitor
@@ -187,7 +187,7 @@ Name[uk]=Захопити зображення на моніторі
 Name[x-test]=xxCapture Current Monitorxx
 Name[zh_CN]=抓取当前显示器
 Name[zh_TW]=擷取目前螢幕
-Exec=spectacle -m
+Exec=qdbus org.kde.Spectacle / CurrentScreen false
 
 [Desktop Action ActiveWindowScreenShot]
 Name=Capture Active Window
@@ -229,7 +229,7 @@ Name[uk]=Захопити зображення активного вікна
 Name[x-test]=xxCapture Active Windowxx
 Name[zh_CN]=抓取当前活动窗口
 Name[zh_TW]=擷取作用中的視窗
-Exec=spectacle -a
+Exec=qdbus org.kde.Spectacle / ActiveWindow true false
 
 [Desktop Action RectangularRegionScreenShot]
 Name=Capture Rectangular Region
@@ -271,4 +271,4 @@ Name[uk]=Захопити прямокутну область екрана
 Name[x-test]=xxCapture Rectangular Regionxx
 Name[zh_CN]=抓取方形区域
 Name[zh_TW]=擷取矩形區域
-Exec=spectacle -r
+Exec=qdbus org.kde.Spectacle / RectangularRegion true
