Add comment to desktop file
BUG: 408352

--- a/desktop/org.kde.spectacle.desktop
+++ b/desktop/org.kde.spectacle.desktop
@@ -77,6 +77,47 @@ Name[uk]=Spectacle
 Name[x-test]=xxSpectaclexx
 Name[zh_CN]=Spectacle
 Name[zh_TW]=Spectacle
+Comment=Screenshot capture utility
+Comment[ar]=أداة لأخذ اللقطات
+Comment[bg]=Инструмент за заснемане на екрана
+Comment[ca]=Utilitat per prendre captures de pantalla
+Comment[ca@valencia]=Utilitat per prendre captures de pantalla
+Comment[cs]=Nástroj na snímání obrazovky
+Comment[da]=Værktøj til skærmbilleder
+Comment[de]=Dienstprogramm für Bildschirmfotos
+Comment[el]=Εργαλείο λήψης στιγμιοτύπων οθόνης
+Comment[en_GB]=Screenshot Capture Utility
+Comment[es]=Utilidad de capturas de pantalla
+Comment[et]=Ekraani pildistamise tööriist
+Comment[eu]=Pantaila-argazkiak atzemateko baliagarritasuna
+Comment[fi]=Kuvankaappausohjelma
+Comment[fr]=Utilitaire de capture d'écran
+Comment[gl]=Utilidade para facer capturas de pantalla
+Comment[he]=כלי לצילום מסך
+Comment[ia]=Utilitate de captura de instantaneo de schermo
+Comment[id]=Utilitas Tangkapan Screenshot
+Comment[it]=Accessorio per catturare schermate
+Comment[ko]=화면 캡처 유틸리티
+Comment[lt]=KDE ekranvaizdžių paveikslavimas
+Comment[nl]=Hulpmiddel voor het maken van een schermafdruk
+Comment[nn]=Verktøy for å lagra skjermbilete
+Comment[pl]=Narzędzie do przechwytywania ekranu
+Comment[pt]=Utilitário de Captura de Imagens
+Comment[pt_BR]=Utilitário de captura de tela
+Comment[ro]=Utilitar de capturare a ecranului
+Comment[ru]=Создание снимков экрана
+Comment[sk]=Nástroj na snímanie obrazovky
+Comment[sl]=Pripomoček za zajem zaslona
+Comment[sr]=Алатка за хватање снимака екрана
+Comment[sr@ijekavian]=Алатка за хватање снимака екрана
+Comment[sr@ijekavianlatin]=Alatka za hvatanje snimaka ekrana
+Comment[sr@latin]=Alatka za hvatanje snimaka ekrana
+Comment[sv]=Verktyg för att ta skärmbilder
+Comment[tr]=Ekran Görüntüsü Yakalama Aracı
+Comment[uk]=Програма для створення знімків екрана
+Comment[x-test]=xxScreenshot capture utilityxx
+Comment[zh_CN]=截图抓取工具
+Comment[zh_TW]=畫面擷取工具
 Categories=Qt;KDE;Utility;
 Keywords=snapshot;capture;print;screenshot;snipping;snip;
 Keywords[ca]=captura de pantalla;captura;imprimeix;impressió;
