Install in new logging directory when we use kf5 5.59.0

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -112,7 +112,11 @@ add_subdirectory(icons)
 add_subdirectory(doc)
 add_subdirectory(tests)
 
-install( FILES spectacle.categories DESTINATION ${KDE_INSTALL_CONFDIR} )
+if (${ECM_VERSION} STRGREATER "5.58.0")
+    install(FILES spectacle.categories  DESTINATION  ${KDE_INSTALL_LOGGINGCATEGORIESDIR})
+else()
+    install(FILES spectacle.categories  DESTINATION ${KDE_INSTALL_CONFDIR})
+endif()
 # summaries
 
 feature_summary(WHAT ALL INCLUDE_QUIET_PACKAGES FATAL_ON_MISSING_REQUIRED_PACKAGES)
