Port to KGlobalAccel
Summary:
Port to KGlobalAccel. This enables us to drop khotkeys and display a configuration
dialog inside the application. The update script correctly sets the defaults and migrates
possibly user changed shortcuts. I didn't know where to place the KActionCollection
and put it in SpectacleConfig for the moment.

FEATURE: 388592
FIXED-IN: 19.08.0

Test Plan: Shortcuts should work as before.

Reviewers: #spectacle, davidedmundson, ngraham

Reviewed By: #spectacle, davidedmundson, ngraham

Subscribers: asturmlechner, ngraham, #spectacle

Tags: #spectacle

Maniphest Tasks: T10519

Differential Revision: https://phabricator.kde.org/D19310

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,6 +61,8 @@ find_package(
         WindowSystem
         DocTools
         NewStuff
+        GlobalAccel
+        XmlGui
 )
 
 # optional components
