--- a/desktop/CMakeLists.txt
+++ b/desktop/CMakeLists.txt
@@ -5,17 +5,28 @@ install(
     DESTINATION ${XDG_APPS_INSTALL_DIR}
 )
 
+install( DIRECTORY DESTINATION "${KDE_INSTALL_FULL_DATAROOTDIR}/kglobalaccel" )
+install(
+    CODE "execute_process(COMMAND \"${CMAKE_COMMAND}\" -E create_symlink \"${KDE_INSTALL_FULL_APPDIR}/org.kde.dolphin.desktop\" \"\$ENV{DESTDIR}${KDE_INSTALL_FULL_DATAROOTDIR}/kglobalaccel/org.kde.dolphin.desktop\")"
+)
+
 install(
     FILES spectacle.notifyrc
     DESTINATION ${KNOTIFYRC_INSTALL_DIR}
 )
 
 install(
-    FILES spectacle.khotkeys
-    DESTINATION ${DATA_INSTALL_DIR}/khotkeys
+    FILES org.kde.spectacle.appdata.xml
+    DESTINATION ${KDE_INSTALL_METAINFODIR}
 )
 
 install(
-    FILES org.kde.spectacle.appdata.xml
-    DESTINATION ${KDE_INSTALL_METAINFODIR}
+    FILES spectacle_shortcuts.upd
+    DESTINATION ${KDE_INSTALL_KCONFUPDATEDIR}
+)
+add_executable(spectacle-migrate-shortcuts MigrateShortcuts.cpp)
+target_link_libraries(spectacle-migrate-shortcuts Qt5::DBus KF5::GlobalAccel KF5::ConfigCore KF5::XmlGui KF5::I18n)
+install(
+    TARGETS spectacle-migrate-shortcuts
+    DESTINATION ${KDE_INSTALL_LIBDIR}/kconf_update_bin
 )
