Force using QStringliteral and disallow implicit string to url cast
Summary: One should always use QStringLiteral. Spectacle code does well here, let's keep it that way

Reviewers: #spectacle, davidre

Reviewed By: #spectacle, davidre

Tags: #spectacle

Differential Revision: https://phabricator.kde.org/D22038

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,6 +40,8 @@ include(FeatureSummary)
 include(ECMQtDeclareLoggingCategory)
 include(ECMAddTests)
 
+add_definitions(-DQT_NO_URL_CAST_FROM_STRING -DQT_NO_CAST_FROM_ASCII)
+
 find_package(
     Qt5 ${QT_MIN_VERSION} CONFIG REQUIRED
         Core
