Port foreach to range-based for
Reviewers: #spectacle, davidre

Reviewed By: #spectacle, davidre

Tags: #spectacle

Differential Revision: https://phabricator.kde.org/D22040

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,7 +40,7 @@ include(FeatureSummary)
 include(ECMQtDeclareLoggingCategory)
 include(ECMAddTests)
 
-add_definitions(-DQT_NO_URL_CAST_FROM_STRING -DQT_NO_CAST_FROM_ASCII)
+add_definitions(-DQT_NO_URL_CAST_FROM_STRING -DQT_NO_CAST_FROM_ASCII -DQT_NO_FOREACH)
 
 find_package(
     Qt5 ${QT_MIN_VERSION} CONFIG REQUIRED
