Allow Spectacle to build with KConfig <= 5.56.0
Summary: D22040 broke the build of Spectacle with KConfig <= 5.56.0, because older KConfig needs Q_FOREACH.  5.53.0 is still the target KF5 version for Spectacle 19.08.

Test Plan: Tested on KConfig 5.54.0 (the last version that works with Qt 5.9 LTS).  Builds and runs correctly.

Reviewers: davidre, #spectacle, ngraham

Reviewed By: #spectacle, ngraham

Subscribers: ngraham, #spectacle

Tags: #spectacle

Differential Revision: https://phabricator.kde.org/D23176

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,7 +40,7 @@ include(FeatureSummary)
 include(ECMQtDeclareLoggingCategory)
 include(ECMAddTests)
 
-add_definitions(-DQT_NO_URL_CAST_FROM_STRING -DQT_NO_CAST_FROM_ASCII -DQT_NO_FOREACH)
+add_definitions(-DQT_NO_URL_CAST_FROM_STRING -DQT_NO_CAST_FROM_ASCII)
 
 find_package(
     Qt5 ${QT_MIN_VERSION} CONFIG REQUIRED
@@ -66,6 +66,10 @@ find_package(
         GlobalAccel
         XmlGui
 )
+
+if(${KF5Config_VERSION} STRGREATER "5.56.0")
+	add_definitions(-DQT_NO_FOREACH)
+endif()
 
 # optional components
 
