Make QuickEditor fullscreen on Wayland
Summary:
Follow up to 4177fde76d32ef0551dae11e12fa7b5cfdb6e02b. While that commit made
the QuickEditor cover all screens it wasn't over the panel anymore. This
commit ensures it is also ontop of the panel. Thanks to David Edmundson for
the code snippets.

Test Plan: QuickEditor also covers the panel

Reviewers: #spectacle, davidedmundson

Reviewed By: davidedmundson

Tags: #spectacle

Differential Revision: https://phabricator.kde.org/D23466

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -84,6 +84,7 @@ target_link_libraries(
         KF5::NewStuff
         KF5::GlobalAccel
         KF5::XmlGui
+        KF5::WaylandClient
 )
 
 if(XCB_FOUND)
