GIT_SILENT: it compiles fine without deprecated methods

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,6 +41,9 @@ include(ECMQtDeclareLoggingCategory)
 include(ECMAddTests)
 
 add_definitions(-DQT_NO_URL_CAST_FROM_STRING -DQT_NO_CAST_FROM_ASCII -DQT_NO_FOREACH)
+if (EXISTS "${CMAKE_SOURCE_DIR}/.git")
+   add_definitions(-DQT_DISABLE_DEPRECATED_BEFORE=0x060000)
+endif()
 
 find_package(
     Qt5 ${QT_MIN_VERSION} CONFIG REQUIRED
