--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,8 +1,16 @@
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../src)
-include_directories(${CMAKE_CURRENT_BINARY_DIR})
+include_directories(${PROJECT_SOURCE_DIR}/src)
 
-ecm_add_test(FilenameTest.cpp
-        ../src/ExportManager.cpp ../src/SpectacleConfig.cpp ../src/Platforms/Platform.cpp
+SET(FILENAME_TEST_SRCS
+    FilenameTest.cpp
+    ../src/ExportManager.cpp
+    ../src/Platforms/Platform.cpp
+)
+
+
+kconfig_add_kcfg_files(FILENAME_TEST_SRCS ${PROJECT_SOURCE_DIR}/src/Gui/SettingsDialog/settings.kcfgc)
+
+ecm_add_test(
+    ${FILENAME_TEST_SRCS}
     TEST_NAME "filename_test"
     LINK_LIBRARIES  Qt5::Test 
         Qt5::PrintSupport KF5::I18n KF5::ConfigCore KF5::GlobalAccel KF5::KIOCore KF5::WindowSystem KF5::XmlGui
