Find qdbus command correctly
Summary:
Spectacle's Desktop file assumes that `qdbus` is in $PATH. However this is not
guaranteed; the command lives in the Qt binaries dir which is not typically in $PATH,
and distros typically create symlinks with different names in `/usr/bin`, but not all
create a second compatibility symlink at `/usr/bin/qdbus` that points to the version
for the current Qt version.

Therefore, we should find the command in the Qt binaries dir itself rather than relying
on these compatibility symlinks.

BUG: 413007
FIXED-IN: 20.04.0

Test Plan:
- Delete the `/usr/bin/qdbus` symlink, if you have one
- Compile and install Spectacle
- Hit PrintScreen
- See that Spectacle still opens

Reviewers: davidedmundson, #spectacle, sitter

Reviewed By: sitter

Subscribers: sitter, #plasma, rdieter, kossebau, fvogt, davidre

Tags: #spectacle

Differential Revision: https://phabricator.kde.org/D25883

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,6 +39,7 @@ include(ECMSetupVersion)
 include(FeatureSummary)
 include(ECMQtDeclareLoggingCategory)
 include(ECMAddTests)
+include(ECMQueryQmake)
 
 add_definitions(-DQT_NO_URL_CAST_FROM_STRING -DQT_NO_CAST_FROM_ASCII -DQT_NO_FOREACH)
 if (EXISTS "${CMAKE_SOURCE_DIR}/.git")
@@ -111,6 +112,9 @@ endif()
 if (NOT XCB_FOUND OR NOT XCB_COMPONENTS_FOUND)
     message(FATAL_ERROR "No suitable backend platform was found. Currently supported platforms are: XCB Components Required: ${XCB_COMPONENTS_ERRORS}")
 endif()
+
+# locate qdbus in the Qt path because not every distro makes a symlink at /usr/bin/qdbus
+query_qmake(QtBinariesDir QT_INSTALL_BINS)
 
 # hand off to subdirectories
 
