Port general settings and save setting to ui files
Summary:
Next step after porting the settings to KConfigXT. I recreated the layout as it
was before. Additionaly the KUrlRequester for the default save location now
only accepts folders.

Test Plan: Works as before

Reviewers: #spectacle, ervin, ngraham

Reviewed By: #spectacle, ervin, ngraham

Tags: #spectacle

Differential Revision: https://phabricator.kde.org/D27373

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -68,6 +68,8 @@ add_executable(
         ${SPECTACLE_SRCS_ALL}
 )
 
+ki18n_wrap_ui(spectacle Gui/SettingsDialog/GeneralOptions.ui Gui/SettingsDialog/SaveOptions.ui)
+
 # link libraries
 
 target_link_libraries(
