Add image annotation via libKImageAnnotator
Summary:
Adds an annotaion mode that makes use of https://github.com/ksnip/kImageAnnotator

While in annotation mode all other actions are disabled.
When the annotation mode is left the changes are applied

FEATURE: 372464
FIXED-IN: 19.08.0

Closes T6321

Test Plan: {F6931191}

Reviewers: #spectacle, dporobic, ngraham

Reviewed By: #spectacle, ngraham

Subscribers: justinzobel, lephuong, mmustac, vperepechin, andisa, Leon0402, davidre, cfeck, ngraham, #spectacle

Tags: #spectacle

Maniphest Tasks: T6321

Differential Revision: https://phabricator.kde.org/D22074

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,6 +49,7 @@ find_package(
         Widgets
         DBus
         PrintSupport
+        Svg
         Test
 )
 
@@ -102,6 +103,13 @@ endif()
 if(NOT XCB_CURSOR_FOUND)
 	set(XCB_COMPONENTS_ERRORS "${XCB_COMPONENTS_ERRORS} XCB-CURSOR ")
 	set(XCB_COMPONENTS_FOUND FALSE)
+endif()
+
+find_package(kImageAnnotator)
+
+if(kImageAnnotator_FOUND)
+    find_package(kColorPicker ${KCOLORPICKER_MIN_VERSION} REQUIRED)
+    set(KIMAGEANNOTATOR_FOUND 1)
 endif()
 
 # fail build if none of the platform backends can be found
