--- a/src/Config.h.in
+++ b/src/Config.h.in
@@ -13,4 +13,7 @@
 /* Set the Spectacle version from CMake */
 #cmakedefine SPECTACLE_VERSION "@SPECTACLE_VERSION@"
 
+/* Define to 1 if we have kImageAnnotator */
+#cmakedefine KIMAGEANNOTATOR_FOUND 1
+
 #endif
