add dbus-activated systemd service
Correctly scopes spectacle in systemd service `app-org.kde.spectacle.service` when dbus-activated (while still working if systemd is not present), as per https://systemd.io/DESKTOP_ENVIRONMENTS/

uses new ECM modules:
- https://invent.kde.org/frameworks/extra-cmake-modules/-/merge_requests/5 to simplify the systemd service templating + install
- https://invent.kde.org/frameworks/extra-cmake-modules/-/merge_requests/11 to generate the dbus service file automatically

--- a/dbus/CMakeLists.txt
+++ b/dbus/CMakeLists.txt
@@ -1,6 +1,16 @@
 # install the DBus service and interface files in the correct place
+include(ECMGenerateDBusServiceFile)
+include(ECMConfiguredInstall)
 
-configure_file(org.kde.Spectacle.service.in ${CMAKE_CURRENT_BINARY_DIR}/org.kde.Spectacle.service)
+# Generate and install dbus-activated systemd service
+ecm_install_configured_files(INPUT app-org.kde.spectacle.service.in DESTINATION ${SYSTEMD_USER_UNIT_INSTALL_DIR})
+
+ecm_generate_dbus_service_file(
+   NAME org.kde.Spectacle
+   EXECUTABLE "${CMAKE_INSTALL_PREFIX}/bin/spectacle --dbus"
+   SYSTEMD_SERVICE app-org.kde.spectacle.service
+   DESTINATION ${CMAKE_CURRENT_BINARY_DIR}
+)
 
 install(FILES ${CMAKE_CURRENT_BINARY_DIR}/org.kde.Spectacle.service DESTINATION ${DBUS_SERVICES_INSTALL_DIR})
 install(FILES org.kde.Spectacle.xml DESTINATION ${DBUS_INTERFACES_INSTALL_DIR})
