Find X11 when building with imageannotator support
Should fix the freeBSD build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -109,6 +109,7 @@ find_package(kImageAnnotator)
 
 if(kImageAnnotator_FOUND)
     find_package(kColorPicker ${KCOLORPICKER_MIN_VERSION} REQUIRED)
+    find_package(X11 REQUIRED)
     set(KIMAGEANNOTATOR_FOUND 1)
 endif()
 
