--- a/dbus/app-org.kde.spectacle.service.in
+++ b/dbus/app-org.kde.spectacle.service.in
@@ -3,4 +3,4 @@ Description=Spectacle screenshot capture utility
 
 [Service]
 ExecStart=@CMAKE_INSTALL_PREFIX@/bin/spectacle --dbus
-BusName=org.kde.Spectacle
+BusName=org.kde.spectacle
