Add Spectacle man page

--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -5,3 +5,9 @@ KDOCTOOLS_CREATE_HANDBOOK(
         INSTALL_DESTINATION ${KDE_INSTALL_DOCBUNDLEDIR}/en
         SUBDIR spectacle
 )
+
+KDOCTOOLS_CREATE_MANPAGE(
+    man-spectacle.1.docbook 1
+    INSTALL_DESTINATION
+    ${KDE_INSTALL_MANDIR}
+)
