Cleanup cmake code
Remove unused stuff
Use target_sources instead of variable cascades for source files

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,76 +1,70 @@
 # common - configure file and version definitions
 
 configure_file(Config.h.in ${CMAKE_CURRENT_BINARY_DIR}/Config.h)
-set(CMAKE_AUTORCC 1)
 
 # target
 
+kconfig_add_kcfg_files(SPECTACLE_SRCS Gui/SettingsDialog/settings.kcfgc)
+
+ecm_qt_declare_logging_category(SPECTACLE_SRCS HEADER spectacle_core_debug.h IDENTIFIER SPECTACLE_CORE_LOG CATEGORY_NAME org.kde.spectacle.core DESCRIPTION "spectacle (core)" EXPORT SPECTACLE)
+ecm_qt_declare_logging_category(SPECTACLE_SRCS HEADER spectacle_gui_debug.h IDENTIFIER SPECTACLE_GUI_LOG CATEGORY_NAME org.kde.spectacle.gui DESCRIPTION "spectacle (gui)" EXPORT SPECTACLE)
+
+add_executable(spectacle
+    ${SPECTACLE_SRCS}
+    Main.cpp
+    ExportManager.cpp
+    SpectacleCore.cpp
+    SpectacleDBusAdapter.cpp
+    ShortcutActions.cpp
+    Gui/KSMainWindow.cpp
+    Gui/KSWidget.cpp
+    Gui/KSImageWidget.cpp
+    Gui/ExportMenu.cpp
+    Gui/ProgressButton.cpp
+    Gui/SmartSpinBox.cpp
+    Gui/SettingsDialog/SaveOptionsPage.cpp
+    Gui/SettingsDialog/SettingsDialog.cpp
+    Gui/SettingsDialog/GeneralOptionsPage.cpp
+    Gui/SettingsDialog/ShortcutsOptionsPage.cpp
+    QuickEditor/QuickEditor.cpp
+    Platforms/PlatformLoader.cpp
+    Platforms/Platform.cpp
+    Platforms/PlatformNull.cpp
+    Platforms/PlatformKWinWayland.cpp
+)
+
 if(XCB_FOUND)
-    set(
-        SPECTACLE_SRCS_PLATFORM_XCB
-            Platforms/PlatformXcb.cpp
+    target_sources(spectacle PRIVATE Platforms/PlatformXcb.cpp)
+
+    target_link_libraries(spectacle
+        XCB::XFIXES
+        XCB::IMAGE
+        XCB::CURSOR
+        XCB::UTIL
+        Qt5::X11Extras
     )
 endif()
-
-set(
-    SPECTACLE_SRCS_PLATFORM
-        Platforms/PlatformLoader.cpp
-        Platforms/Platform.cpp
-        Platforms/PlatformNull.cpp
-        Platforms/PlatformKWinWayland.cpp
-        ${SPECTACLE_SRCS_PLATFORM_XCB}
-)
-
-set(
-    SPECTACLE_SRCS_DEFAULT
-        Main.cpp
-        ExportManager.cpp
-        SpectacleCore.cpp
-        SpectacleDBusAdapter.cpp
-        ShortcutActions.cpp
-        ${SPECTACLE_SRCS_PLATFORM}
-        Gui/KSMainWindow.cpp
-        Gui/KSWidget.cpp
-        Gui/KSImageWidget.cpp
-        Gui/ExportMenu.cpp
-        Gui/ProgressButton.cpp
-        Gui/SmartSpinBox.cpp
-        Gui/SettingsDialog/SaveOptionsPage.cpp
-        Gui/SettingsDialog/SettingsDialog.cpp
-        Gui/SettingsDialog/GeneralOptionsPage.cpp
-        Gui/SettingsDialog/ShortcutsOptionsPage.cpp
-        QuickEditor/QuickEditor.cpp
-)
-
-kconfig_add_kcfg_files(SPECTACLE_SRCS_DEFAULT Gui/SettingsDialog/settings.kcfgc)
-
-ecm_qt_declare_logging_category(SPECTACLE_SRCS_DEFAULT HEADER spectacle_core_debug.h IDENTIFIER SPECTACLE_CORE_LOG CATEGORY_NAME org.kde.spectacle.core DESCRIPTION "spectacle (core)" EXPORT SPECTACLE)
-ecm_qt_declare_logging_category(SPECTACLE_SRCS_DEFAULT HEADER spectacle_gui_debug.h IDENTIFIER SPECTACLE_GUI_LOG CATEGORY_NAME org.kde.spectacle.gui DESCRIPTION "spectacle (gui)" EXPORT SPECTACLE)
 
 if(KIPI_FOUND)
-    set(
-        SPECTACLE_SRCS_KIPI
-            KipiInterface/KSGKipiInterface.cpp
-            KipiInterface/KSGKipiInfoShared.cpp
-            KipiInterface/KSGKipiImageCollectionShared.cpp
-            KipiInterface/KSGKipiImageCollectionSelector.cpp
+    target_sources(spectacle PRIVATE
+        KipiInterface/KSGKipiInterface.cpp
+        KipiInterface/KSGKipiImageCollectionShared.cpp
+        KipiInterface/KSGKipiInfoShared.cpp
+        KipiInterface/KSGKipiImageCollectionSelector.cpp
     )
+
+    target_link_libraries(spectacle KF5::Kipi)
 endif()
 
-set(
-    SPECTACLE_SRCS_ALL
-        ${SPECTACLE_SRCS_DEFAULT}
-        ${SPECTACLE_SRCS_KIPI}
-)
+if(PURPOSE_FOUND)
+    target_link_libraries(spectacle KF5::PurposeWidgets)
+endif()
 
-add_executable(
-    spectacle
-        ${SPECTACLE_SRCS_ALL}
-)
+if(KIMAGEANNOTATOR_FOUND)
+    target_link_libraries(spectacle kImageAnnotator::kImageAnnotator)
+endif()
 
 ki18n_wrap_ui(spectacle Gui/SettingsDialog/GeneralOptions.ui Gui/SettingsDialog/SaveOptions.ui)
-
-# link libraries
 
 target_link_libraries(
     spectacle
@@ -89,34 +83,5 @@ target_link_libraries(
         KF5::XmlGui
         KF5::WaylandClient
 )
-
-if(XCB_FOUND)
-    target_link_libraries(
-        spectacle
-            XCB::XFIXES
-            XCB::IMAGE
-            XCB::CURSOR
-            XCB::UTIL
-            Qt5::X11Extras
-    )
-endif()
-
-if(KIPI_FOUND)
-    target_link_libraries (
-        spectacle
-            KF5::Kipi
-    )
-endif()
-
-if(PURPOSE_FOUND)
-    target_link_libraries (
-        spectacle
-            KF5::PurposeWidgets
-    )
-endif()
-
-if(KIMAGEANNOTATOR_FOUND)
-    target_link_libraries(spectacle kImageAnnotator::kImageAnnotator)
-endif()
 
 install(TARGETS spectacle ${KDE_INSTALL_TARGETS_DEFAULT_ARGS})
