Use versionless Qt target
This makes it easier to build against future Qt versions

--- a/desktop/CMakeLists.txt
+++ b/desktop/CMakeLists.txt
@@ -30,7 +30,7 @@ install(
     DESTINATION ${KDE_INSTALL_KCONFUPDATEDIR}
 )
 add_executable(spectacle-migrate-shortcuts MigrateShortcuts.cpp)
-target_link_libraries(spectacle-migrate-shortcuts Qt5::DBus KF5::GlobalAccel KF5::ConfigCore KF5::XmlGui KF5::I18n)
+target_link_libraries(spectacle-migrate-shortcuts Qt::DBus KF5::GlobalAccel KF5::ConfigCore KF5::XmlGui KF5::I18n)
 install(
     TARGETS spectacle-migrate-shortcuts
     DESTINATION ${KDE_INSTALL_LIBDIR}/kconf_update_bin
